# career-agent

./: .cursorrules  .env_example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: code-quality.yml
src/: cache.py  config.py  main.py
src/agents/: capability_agent.py  company_research_agent.py
src/config/: settings.py
src/frontend/: index.html  package.json  vite.config.ts
src/frontend/src/: App.tsx  main.tsx
src/frontend/src/components/: Layout.tsx  ThemeToggle.tsx  theme-provider.tsx  theme-toggle.tsx
src/frontend/src/components/providers/: ThemeProvider.tsx
src/frontend/src/components/ui/: button.tsx  dropdown-menu.tsx
src/frontend/src/hooks/: useColorMode.ts
src/frontend/src/layouts/: RootLayout.tsx
src/frontend/src/store/: atoms.ts
src/frontend/src/styles/: globals.css
src/frontend/src/theme/: context.tsx  theme.ts  types.ts
src/profile/: base.py  manager.py  notion.py
src/repositories/: base.py  companies.py  database.py  jobs.py  models.py
src/services/knowledge/: base.py  notion.py
src/services/scrapers/: base.py  factory.py  zenrows.py
src/storage/: base.py  companies.py  database.py  jobs.py  models.py  vector_store.py
src/storage/article/: interfaces.py  manager.py  mongodb.py  pinecone_index.py  types.py
src/storage/base/: exceptions.py  interfaces.py  types.py
src/storage/company/: interfaces.py  manager.py  models.py  mongodb.py  pinecone_index.py  store.py  types.py
src/storage/generic/: interfaces.py  manager.py  mongodb.py  pinecone_index.py  types.py
src/storage/managers/: base.py
src/storage/startup/: models.py  store.py
src/templates/: home.html
src/utils/: logger.py
src/workflows/: base.py  job_ads_scraping.py
src/workflows/deployments/: deploy_job_ads_scraping.py
tests/: test_cache.py
tests/agents/: test_capability_agent.py  test_company_research_agent.py
tests/profile/: test_manager.py  test_notion.py  test_notion_profile.py
tests/repositories/: test_companies.py  test_company_job.py  test_jobs.py
tests/services/scrapers/: test_factory.py  test_zenrows.py
tests/storage/: test_companies.py  test_jobs.py  test_storage.py  test_vector_store.py
tests/storage/article/: test_interfaces.py  test_mongodb.py  test_pinecone_index.py  test_types.py
tests/storage/company/: test_mongodb_connection.py  test_pinecone_connection.py  test_storage_sync.py  test_store.py
tests/storage/startup/: test_store.py
