[tool.poetry]
name = "career-crew"
version = "0.1.0"
description = "AI agents that help advance my career."
authors = ["Nerijus Masikonis <nerijus@masikonis.lt>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.12"
langchain-core = "^0.3.25"
langgraph = "^0.2.59"
python-dotenv = "^1.0.0"
zenrows = "^1.4.0"
chromadb = "^0.5.23"
langchain-openai = "^0.2.12"
langchain-community = "^0.3.12"
notion-client = "^2.2.1"
nest-asyncio = "^1.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "strict"
pythonpath = "."
